Update Build SukiSU Ultra OnePlus.yml

--- a/.github/workflows/Build SukiSU Ultra OnePlus.yml
+++ b/.github/workflows/Build SukiSU Ultra OnePlus.yml
@@ -183,7 +183,7 @@ jobs:
             kernel_platform/msm-kernel/scripts/setlocalversion \
             kernel_platform/external/dtc/scripts/setlocalversion; do
               sed -i '/^res=/a res=$(echo "$res" | sed -E '\''s/-[0-9]+-o-g[0-9a-f]{7,}//'\'')' "$path"
-              sed -i "\$s|echo \"\\\$res\"|echo \"\$res-${{ github.event.inputs.SUFFIX }}\"|" "$path"
+              sed -i "\$s|echo \"\\\$res\"|echo \"\$res-MoYu${{ github.event.inputs.SUFFIX }}\"|" "$path"
           done
           git add -A
           git commit -m "Clean git describe suffix and append custom suffix: ${{ github.event.inputs.SUFFIX }}"
